docs: ✏️ add swagger
